<resources>
    <string name="app_name">ShiYouApp</string>
    <string name="loading">加载中</string>
    <string name="book_search_hist">搜索你想要的内容</string>
    <string name="book_booktv">本社图书</string>
    <string name="book_readtencent">腾讯阅读</string>
    <string name="tencent_book">腾讯图书</string>
    <string name="book_livecourse">直播课程</string>
    <string name="book_more">查看全部</string>
    <string name="book_live_list">直播列表</string>
    <string name="find_zixun">活动资讯</string>
    <string name="find_tuijian">推荐图书</string>
    <string name="find_live">直播预约</string>
    <string name="find_dinyue">专栏订阅</string>
    <string name="find_title">油阅</string>
    <string name="main_my">我的</string>
    <string name="main_find">发现</string>
    <string name="main_book">书城</string>
    <string name="main_community">社区</string>
    <string name="login_number">账号登录</string>
    <string name="login_register">快速注册</string>
    <string name="register_newuser">新用户注册</string>
    <string name="register_hint_yanzheng">请输入短信验证码</string>
    <string name="register_yanzheng">获取验证码</string>
    <string name="register_hint_pwd">请设置6-18位密码</string>
    <string name="register_pwd_confirm">再次确认密码</string>
    <string name="register_read">我以同意并阅读</string>
    <string name="register_read_tv">《用户注册协议》</string>
    <string name="register_hint_number">输入您的手机号</string>
    <string name="login_hint_number">输入您的手机号/账号</string>
    <string name="login_hint_pas">输入您的密码</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="set_pwd_title">设置新密码</string>
    <string name="set_pwd_new">输入您的新密码</string>
    <string name="set_pwd_confirm">再次确认密码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="introduce">内容简介</string>
    <string name="author">作者</string>
    <string name="catalog">目录</string>
    <string name="read">阅读</string>
    <string name="purchase">购买</string>
    <string name="book_down">下载到书架</string>
    <string name="recommend">推荐</string>
    <string name="recommend_select">选择推荐人</string>
    <string name="recommend_liyou">推荐理由</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="classification">分类</string>
    <string name="course">课程</string>
    <string name="comment_send">快来发表评论吧！</string>
    <string name="course_goumai">已购买</string>
    <string name="course_keshi">课时</string>
    <string name="course_content">课程内容</string>
    <string name="course_details">课程详情</string>
    <string name="open">展开</string>
    <string name="follow">关注</string>
    <string name="all_comment">全部评论</string>
    <string name="course_play">视频播放</string>
    <string name="collection">收藏</string>
    <string name="share">分享</string>
    <string name="teacher_introduce">专栏简介</string>
    <string name="free_read">免费试读</string>
    <string name="teacher">专家：</string>
    <string name="down_tv">下载</string>
    <string name="know">知道啦</string>
    <string name="dialog_tencent_tv">非中石油员工会员</string>
    <string name="dialog_tencent_tvv">没有权限进入此区域哦！</string>
    <string name="relevant_course">相关课程</string>
    <string name="nodata">暂无数据</string>
    <string name="update_user_img">修改头像</string>
    <string name="user_name">姓名</string>
    <string name="user_gender">性别</string>
    <string name="user_phone">性别</string>
    <string name="user_date">出生日期</string>
    <string name="user_reservation">保存</string>
    <string name="set_pwd">密码修改</string>
    <string name="set_introduce">系统介绍</string>
    <string name="my_set">系统设置</string>
    <string name="my_used_pwd">旧密码</string>
    <string name="my_new_pwd">新密码</string>
    <string name="my_confirm_pwd">确认密码</string>
    <string name="my_used_pwd_in">请输入旧密码</string>
    <string name="my_new_pwd_in">请输入新密码</string>
    <string name="my_confirm_pwd_in">请输入确认密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="system_edition">系统版本</string>
    <string name="system_introduce">系统介绍</string>
    <string name="no_tv">暂无</string>
    <string name="free">免费</string>
    <string name="book">图书</string>
    <string name="no_login">木有登录哦~</string>
    <string name="my_collection_course">收藏的课程</string>
    <string name="my_collection_wenda">收藏的问答</string>
    <string name="my_collection_teacher">收藏的专家</string>
    <string name="my_collection_jigou">收藏的机构</string>
    <string name="my_booklist">我的书架</string>
    <string name="my_yigou">已购专区</string>
    <string name="my_shoucang">关注收藏</string>
    <string name="my_wenzhang">文章笔记</string>
    <string name="my_shequ">社区互动</string>


    <string name="no_data">~~空空如也~~\n试试刷新一下</string>
    <string name="on_retry">~~数据坏了~~\n试试修复一下</string>
</resources>
