<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/layout_public_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_used_pwd"
            android:textColor="@color/color_33"
            android:textSize="27px" />
        <EditText
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/my_used_pwd_in"
            android:textColor="@color/color_66"
            android:background="@null"
            android:textSize="27px"
            android:inputType="textPassword"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_f7f7"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_new_pwd"
            android:textColor="@color/color_33"
            android:textSize="27px" />
        <EditText
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/my_new_pwd_in"
            android:textColor="@color/color_66"
            android:background="@null"
            android:textSize="27px"
            android:inputType="textPassword"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_f7f7"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_confirm_pwd"
            android:textColor="@color/color_33"
            android:textSize="27px" />
        <EditText
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/my_confirm_pwd_in"
            android:textColor="@color/color_66"
            android:background="@null"
            android:textSize="27px"
            android:layout_marginLeft="80px"
            android:inputType="textPassword"
            android:layout_marginRight="80px"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_f7f7"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
</LinearLayout>