<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f7f7"
    android:orientation="vertical">

    <include layout="@layout/layout_public_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30px"
        android:background="@color/White"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40px"
            android:background="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70px"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/reg_to_login"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_number"
                android:textColor="@color/color_66"
                android:textSize="29px" />

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/color_e6" />


            <RelativeLayout
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="100px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/register_newuser"
                    android:textColor="@color/color_320"
                    android:textSize="29px" />

                <View
                    android:layout_width="50px"
                    android:layout_height="4px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/color_320" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_phone" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/register_hint_number"
                android:id="@+id/phone"
                android:textColor="@color/color_bb"
                android:inputType="number"
                android:textSize="29px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_yanzheng" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/register_hint_yanzheng"
                android:textColor="@color/color_bb"
                android:inputType="number"
                android:id="@+id/yanzheng_num"
                android:textSize="29px" />

            <TextView
                android:id="@+id/yanzheng_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120px"
                android:text="@string/register_yanzheng"
                android:textColor="@color/color_66" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_pwd" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/register_hint_pwd"
                android:id="@+id/pwd"
                android:inputType="textPassword"
                android:textColor="@color/color_bb"
                android:textSize="29px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_pwd" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/register_pwd_confirm"
                android:inputType="textPassword"
                android:id="@+id/confirm_pwd"
                android:textColor="@color/color_bb"
                android:textSize="29px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="50px"
            android:layout_marginTop="32px"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/read_button_selector"
                android:checked="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_read"
                android:textColor="@color/color_66"
                android:layout_marginLeft="10px"
                android:textSize="23px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_read_tv"
                android:textColor="@color/color_320"
                android:layout_marginLeft="6px"
                android:textSize="23px" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="74px"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/White"
            android:textSize="33px" />

        <TextView
            android:id="@+id/login_error_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15px"
            android:text="@string/loading"
            android:textColor="@color/google_red"
            android:textSize="23px"
            android:visibility="gone"
             />

    </LinearLayout>


</LinearLayout>