<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f7f7"
    android:orientation="vertical">

    <include layout="@layout/layout_public_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30px"
        android:background="@color/White"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40px"
            android:background="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="74px"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="100px">
                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/login_number"
                    android:textColor="@color/color_320"
                    android:textSize="29px" />

                <View
                    android:layout_width="50px"
                    android:layout_height="4px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/color_320" />
            </RelativeLayout>
            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/color_e6" />

            <TextView
                android:id="@+id/login_to_register"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_register"
                android:textColor="@color/color_66"
                android:textSize="29px"

                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="68px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_phone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/login_hint_number"
                android:inputType="number"
                android:textColor="@color/color_bb"
                android:textSize="29px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_pwd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:background="@null"
                android:hint="@string/login_hint_pas"
                android:textColor="@color/color_bb"
                android:textSize="29px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/color_e6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50px"
                android:layout_marginTop="32px"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/color_320"
                android:textSize="23px" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="74px"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/White"
            android:textSize="33px" />

        <TextView
            android:id="@+id/login_error_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"
            android:text="@string/loading"
            android:textColor="@color/google_red"
            android:textSize="23px"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>